fixing input not centered (pls work)

--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -5,16 +5,6 @@ body {
   position: relative;
 }
 
-body::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-
 .input-game {
   display: flex;
   align-items: center;
